...
          )}
          name="preferredMaxDistance"
        />
      </Container>
      <BottomAction.Container>
        <Button
          testID="preferences-save"
          loading={myDogUpdateMutation.isPending}
          onPress={saveUser}
        >
          {t("preferences.savePreferences")}
        </Button>
      </BottomAction.Container>
...
