...
        on top said "Today".
      */}
      <DateText
        fontSize="xs"
        fontWeight="medium"
        style={styles.dateText}
        testID="chat-day-separator"
      >
        {formatDate(currentMessageDate)}
      </DateText>
    </View>
  );
};
...
