...

  let bella = bellaUser.dogs[0];
  if (!bella) {
    bella = await prisma.dog.create({
      data: {
        userId: bellaUser.id,
        name: "Bella",
        gender: "FEMALE",
        color: "GOLDEN",
        size: "MEDIUM",
        weight: 20,
        breedId: GOLDEN_ID,
        birthDate: yearsAgo(2),
...
